--- a/index.html
+++ b/index.html
@@ -86,18 +86,22 @@
     					<h3>Заполните форму</h3>
     					<div class="input-block">
     						<p>Введите Ваше имя</p>
+                            <span class="error">"Заполните поле"</span>
     						<input type="text" placeholder="Иван Иванов">
     					</div>
     					<div class="input-block">
     						<p>Введите Ваш e-mail</p>
+                            <span class="error">"Заполните поле"</span>
     						<input type="text" placeholder="ivanov@mail.ru">
     					</div>
     					<div class="input-block">
     						<p>Введите Ваш телефон</p>
-    						<input type="text" class="tel-input" placeholder="+7 495 555 55">
+                            <span class="error">"Заполните поле"</span>
+    						<input type="text" class="tel-input" placeholder="+7 (123) 555 5555">
     					</div>
     					<div class="input-block">
     						<p>Введите Ваш город</p>
+                            <span class="error">"Заполните поле"</span>
     						<input type="text">
     					</div>
     					<div class="input-block">
@@ -253,18 +257,22 @@
     					<h3>Заполните форму</h3>
     					<div class="input-block">
     						<p>Введите Ваше имя</p>
+                            <span class="error">"Заполните поле"</span>
     						<input type="text" placeholder="Иван Иванов">
     					</div>
     					<div class="input-block">
     						<p>Введите Ваш e-mail</p>
+                            <span class="error">"Заполните поле"</span>
     						<input type="text" placeholder="ivanov@mail.ru">
     					</div>
     					<div class="input-block">
     						<p>Введите Ваш телефон</p>
-    						<input type="text" class="tel-input" placeholder="+7 495 555 55">
+                            <span class="error">"Заполните поле"</span>
+    						<input type="text" class="tel-input" placeholder="+7 (495) 555 5555">
     					</div>
     					<div class="input-block">
     						<p>Введите Ваш город</p>
+                            <span class="error">"Заполните поле"</span>
     						<input type="text">
     					</div>
     					<div class="input-block">
@@ -637,18 +645,22 @@
                         <h3>Заполните форму</h3>
                         <div class="input-block">
                             <p>Введите Ваше имя</p>
+                            <span class="error">"Заполните поле"</span>
                             <input type="text" placeholder="Иван Иванов">
                         </div>
                         <div class="input-block">
                             <p>Введите Ваш e-mail</p>
+                            <span class="error">"Заполните поле"</span>
                             <input type="text" placeholder="ivanov@mail.ru">
                         </div>
                         <div class="input-block">
                             <p>Введите Ваш телефон</p>
-                            <input type="text" class="tel-input" placeholder="+7 495 555 55">
+                            <span class="error">"Заполните поле"</span>
+                            <input type="text" class="tel-input" placeholder="+7 (495) 555 5555">
                         </div>
                         <div class="input-block">
                             <p>Введите Ваш город</p>
+                            <span class="error">"Заполните поле"</span>
                             <input type="text">
                         </div>
                         <div class="input-block">
@@ -691,18 +703,22 @@
                 <h3>Заполните форму</h3>
                 <div class="input-block">
                     <p>Введите Ваше имя</p>
+                    <span class="error">"Заполните поле"</span>
                     <input type="text" placeholder="Иван Иванов">
                 </div>
                 <div class="input-block">
                     <p>Введите Ваш e-mail</p>
+                    <span class="error">"Заполните поле"</span>
                     <input type="text" placeholder="ivanov@mail.ru">
                 </div>
                 <div class="input-block">
                     <p>Введите Ваш телефон</p>
-                    <input type="text" class="tel-input" placeholder="+7 495 555 55">
+                    <span class="error">"Заполните поле"</span>
+                    <input type="text" class="tel-input" placeholder="+7 (495) 555 5555">
                 </div>
                 <div class="input-block">
                     <p>Введите Ваш город</p>
+                    <span class="error">"Заполните поле"</span>
                     <input type="text">
                 </div>
                 <div class="input-block">
@@ -725,10 +741,12 @@
                 <h3>ВВЕДИТЕ СВОЕ ИМЯ И ТЕЛЕФОН. НАШ СПЕЦИАЛИСТ СВЯЖЕТСЯ С ВАМИ В БЛИЖАЙШЕЕ ВРЕМЯ</h3>
                 <div class="input-block">
                     <p>Введите Ваше имя</p>
+                    <span class="error">"Заполните поле"</span>
                     <input type="text" placeholder="Иван Иванов">
                 </div>
                 <div class="input-block tel-block clearfix">
                     <p>Введите Ваш телефон</p>
+                    <span class="error">"Заполните поле"</span>
                     <div class="clear"></div>
                     <input type="text" value="+7" class="in-1">
                     <input type="text" placeholder="123" class="in-2">
