--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 				</a>
 			</div>
 			<div class="right-block clearfix">
-				<p>8 (911) 220-02-22</p>
+				<p>8 (812) 927 66 37</p>
 				<div class="clear"></div>
 				<a class="link-btn get-call-link pulse-grow">Заказать звонок</a>
 			</div>
@@ -461,15 +461,15 @@
     				</div>
     			</div>
     			<div class="work-block">
-    				<div class="work-table">
-    					<div class="table-block">
-    						<img src="images/snipped.png" alt="">
-    					</div>
-    				</div>
-    				<div class="work-title">
-    					доставка на ваш склад
-    				</div>
-    			</div>
+                    <div class="work-table">
+                        <div class="table-block">
+                            <img src="images/card.png" alt="">
+                        </div>
+                    </div>
+                    <div class="work-title">
+                        подтверждение оплаты
+                    </div>
+                </div>
     			<div class="work-block">
     				<div class="work-table">
     					<div class="table-block">
@@ -480,16 +480,16 @@
     					погрузка- оправка товара
     				</div>
     			</div>
-    			<div class="work-block">
-    				<div class="work-table">
-    					<div class="table-block">
-    						<img src="images/card.png" alt="">
-    					</div>
-    				</div>
-    				<div class="work-title">
-    					подтверждение оплаты
-    				</div>
-    			</div>
+                <div class="work-block">
+                    <div class="work-table">
+                        <div class="table-block">
+                            <img src="images/snipped.png" alt="">
+                        </div>
+                    </div>
+                    <div class="work-title">
+                        доставка на ваш склад
+                    </div>
+                </div>
     		</div>
     		<a href="#" class="link-btn">Оставить заявку</a>
     	</div>
@@ -595,14 +595,14 @@
                     <div class="war-desc">
                         <header>Доставка</header>
                         <p>Гарантируем Вам сохранение продукции на протяжении всего пути.  Доставка рефрежиратором с поддержанием постоянной температуры от -3 до -18 С.</p>
-                        <a href="#" class="link-btn">узнать подробнее</a>
+                        <a class="link-btn show-more-link">узнать подробнее</a>
                     </div>
                 </div>
                 <div class="war-block clearfix">
                     <div class="war-desc">
                         <header>Страховка</header>
                         <p>Все расходы по страхованию берем на себя! Мы готовы поручится за сохранность товара при перевозке и соблюдение условий доставки.</p>
-                        <a href="#" class="link-btn">узнать подробнее</a>
+                        <a class="link-btn show-more-link">узнать подробнее</a>
                     </div>
                     <div class="war-img">
                         <img src="images/war-2.jpg" alt="">
@@ -614,8 +614,8 @@
                     </div>
                     <div class="war-desc">
                         <header>Мониторинг</header>
-                        <p>Наша компания еженедельно проводит мониторинг цен и предложений от импортёров и рыбодобывающих предприятий. <span>В результате Вы получаете лучшую стоимость, что позволит Вам сэкономить..</span></p>
-                        <a href="#" class="link-btn">узнать подробнее</a>
+                        <p>Наша компания еженедельно проводит мониторинг цен и предложений от импортёров и рыбодобывающих предприятий. <span>В результате Вы получаете лучшую стоимость, что позволит Вам сэкономить.</span></p>
+                        <a class="link-btn get-price-link">Получить прайс</a>
                     </div> 
                 </div>
             </div>
@@ -684,7 +684,7 @@
                 </a>
             </div>
             <div class="right-block clearfix">
-                <p>8 (911) 220-02-22</p>
+                <p>8 (812) 927 66 37</p>
                 <div class="clear"></div>
                 <a class="link-btn get-call-link">Заказать звонок</a>
             </div>
@@ -730,6 +730,45 @@
     </div>
 </div>
 
+<div class="modal show-more clearfix">
+    <div class="closed"></div>
+    <div class="left-block">
+        <div class="pen"></div>
+    </div>
+    <div class="right-block">
+        <form class="main-form">
+            <fieldset>
+                <h3>Заполните форму</h3>
+                <div class="input-block">
+                    <p>Введите Ваше имя</p>
+                    <span class="error">"Заполните поле"</span>
+                    <input type="text" placeholder="Иван Иванов">
+                </div>
+                <div class="input-block">
+                    <p>Введите Ваш e-mail</p>
+                    <span class="error">"Заполните поле"</span>
+                    <input type="text" placeholder="ivanov@mail.ru">
+                </div>
+                <div class="input-block">
+                    <p>Введите Ваш телефон</p>
+                    <span class="error">"Заполните поле"</span>
+                    <input type="text" class="tel-input" placeholder="+7 (495) 555 5555">
+                </div>
+                <div class="input-block">
+                    <p>Введите Ваш город</p>
+                    <span class="error">"Заполните поле"</span>
+                    <input type="text">
+                </div>
+                <div class="input-block">
+                    <input type="submit" value="Отправить" class="link-btn">
+                </div>
+                <div class="privacy">ГАРАНТИРУЕМ КОНФИДЕНЦИАЛЬНОСТЬ ВАШИХ ДАННЫХ</div>
+            </fieldset>
+        </form>
+    </div>
+</div>
+
+
 <div class="modal get-call clearfix">
     <div class="closed"></div>
     <div class="left-block">
@@ -758,6 +797,13 @@
                 <div class="privacy">ГАРАНТИРУЕМ КОНФИДЕНЦИАЛЬНОСТЬ ВАШИХ ДАННЫХ</div>
             </fieldset>
         </form>
+    </div>
+</div>
+
+<div class="modal finish-sms">
+    <div class="closed"></div>
+    <div class="title">
+        Ваше сообщение принято. <br>Мы скоро с вами свяжемся
     </div>
 </div>
 
