--- a/index.html
+++ b/index.html
@@ -25,18 +25,18 @@
 	<nav class="nav">
 		<div class="container">
 			<ul class="clearfix">
-				<li><a href="#top-block-container" class="top-block-container active">главная</a></li>
-				<li><a href="#work_with_us-container" class="work_with_us-container">с нами работают</a></li>
-				<li><a href="#stock-container" class="stock-container">ассортимент</a></li>
-				<li><a href="#how_we_work-container" class="how_we_work-container">этапы работы</a></li>
-				<li><a href="#why_we-container" class="why_we-container">преимущества</a></li>
-				<li><a href="#warranty-container" class="warranty-container">гарантии</a></li>
-				<li><a href="#maps-block-container" class="maps-block-container">контакты</a></li>
+				<li><a href="#top-block" class="active" data-target="top-block">главная</a></li>
+				<li><a href="#work_with_us" data-target="work_with_us">с нами работают</a></li>
+				<li><a href="#stock" data-target="stock">ассортимент</a></li>
+				<li><a href="#how_we_work" data-target="how_we_work">этапы работы</a></li>
+				<li><a href="#why_we" data-target="why_we">преимущества</a></li>
+				<li><a href="#warranty" data-target="warranty">гарантии</a></li>
+				<li><a href="#maps-block" data-target="maps-block">контакты</a></li>
 			</ul>
 		</div>
 	</nav><!-- navigation -->
 	
-	<div class="top-block div" id="top-block-container">
+	<div class="top-block" id="top-block">
 		<div class="container clearfix">
 			<div class="left-block">
 				<p>Поставка охлажденной и свежемороженой рыбы и морепродуктов оптом по России</p>
@@ -114,7 +114,7 @@
     	</div>
     </div><!-- order -->
 
-    <div class="work_with_us div" id="work_with_us-container">
+    <div class="work_with_us" id="work_with_us">
     	<div class="container">
     		<h2>С нами работают</h2>
     		<div class="work-container clearfix">
@@ -285,7 +285,7 @@
     	</div>
     </div><!-- order -->
 
-    <div class="stock div" id="stock-container">
+    <div class="stock" id="stock">
     	<div class="container">
     		<h2>Наш ассортимент</h2>
     		<div class="stock-container clearfix">
@@ -416,7 +416,7 @@
     	</div>
     </div><!-- countries -->
 
-    <div class="how_we_work div" id="how_we_work-container">
+    <div class="how_we_work" id="how_we_work">
     	<div class="container">
     		<h2>Как мы работаем</h2>
     		<div class="work-container clearfix">
@@ -495,7 +495,7 @@
     	</div>
     </div><!-- ho we work -->
 
-    <div class="why_we div" id="why_we-container">
+    <div class="why_we" id="why_we">
     	<div class="container">
     		<h2>ПОЧЕМУ КЛИЕНТЫ ДОВОЛЬНЫ НАШЕЙ <br> РАБОТОЙ И РЕКОМЕНДУЮТ НАС ПАРТНЕРАМ</h2>
     		<div class="why_we-container clearfix">
@@ -584,7 +584,7 @@
     	</div>
     </div><!-- why we -->
 
-    <div class="warranty div" id="warranty-container">
+    <div class="warranty" id="warranty">
         <div class="container">
             <h2>гарантии</h2>
             <div class="war-container">
@@ -622,7 +622,7 @@
         </div>
     </div><!-- warranty -->
 
-    <div class="maps-block div" id="maps-block-container">
+    <div class="maps-block" id="maps-block">
         <script type="text/javascript" charset="utf-8" src="https://api-maps.yandex.ru/services/constructor/1.0/js/?sid=qwhLTar9C6qeglu5J1XMBTWH8HvsdHO3&width=100%&height=575"></script>
         <div class="maps-title">
             <div class="container">
